--- a/views/res_edit.handlebars
+++ b/views/res_edit.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="create_options">
-    <a href="/view?userId={{user._id}}">
+    <a href="/view?userId=${{userId}}&baseId=${{baseId}}">
       <div id="option_1">
         <p>< Return to View Reservations</p>
       </div>
