--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="create_options">
-        <a href="/home?userId={{user._id}}"><div id="option_1">
+        <a href="/home?userId={{userId}}&baseId={{baseId}}"><div id="option_1">
             <p>&lt; Return to Home</p>
         </div></a>
     </div>
