--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,13 @@
 <div class="container">
 
-    <a href="/create?userId={{user._id}}">
+    <a href="/create?userId={{userId}}&baseId={{baseId}}">
         <div>
             <h2>Create Reservation</h2>
             <img src="/resources/resv_create.png" class="profile-pic">
         </div>
     </a>
 
-    <a href="/view?userId={{user._id}}">
+    <a href="/view?userId={{userId}}&baseId={{baseId}}">
         <div>
             <h2>View Reservations</h2>
             <img src="/resources/resv_view.png" class="profile-pic">
