--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="create_options">
-    <a href="/home?userId={{user._id}}">
+    <a href="/home?userId={{userId}}&baseId={{baseId}}">
       <div id="option_1">
         <p>< Return to Home</p>
       </div>
