prof_info changes

--- a/views/prof_info.handlebars
+++ b/views/prof_info.handlebars
@@ -46,7 +46,7 @@
                                 <tr>
                                     <td>{{lab_name}}</td>
                                     <td>{{seat}}</td>
-                                    <td>{{lab_sched}} {{startTime}} {{endTime}}</td>
+                                    <td>{{formatDate lab_sched}}&nbsp;&nbsp;&nbsp;{{startTime}} - {{endTime}}</td>
                                 </tr>
                             {{/each}}
                         </tbody>
