--- a/public/profile_info.css
+++ b/public/profile_info.css
@@ -140,8 +140,10 @@ button:hover {
     flex-direction: column;
     background-color: rgb(236, 236, 236);
     border-radius: 20px;
+    padding: 10px;
 
-    height: 500px;
+    /* Adjust the width if u feel like it's to wide or narrow*/
+    width: 550px;
 }
 
 .reservation-table, th, td {
