--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,50 +1,47 @@
 <html>
-    <head><title>Index Page</title></head>
+<head><title>Index Page</title></head>
 
-    <body>
-        <h1>Student</h1>
-        <h3>Register, Welcome and Login pages</h3><br>
-        <a href="/home">Home Page</a>
-        <br>
-        <a href="..\STUDENT\authentication\Register.html">Sign Up page</a>
-        <br>
-        <a href="..\STUDENT\authentication\Login.html">Login page</a>
-        <br>
-        <h3>Reservation pages</h3><br>
-        <a href="/laboratory">Lab 1</a><br>
-        <a href="..\STUDENT\reservations\laboratory_2.html">Lab 2</a><br>
-        <a href="..\STUDENT\reservations\laboratory_3.html">Lab 3</a><br>
-        <a href="..\STUDENT\reservations\laboratory_4.html">Lab 4</a><br>
-        <a href="..\STUDENT\reservations\laboratory_5.html">Lab 5</a><br>
-        <a href="..\STUDENT\reservations\laboratory_6.html">Lab 6</a><br>
-        <a href="/">Reservation homepage</a><br>
-        <a href="/create">Create Reservations</a><br>
-        <a href="/view">View Reservations</a><br>
-        <h3>User Profile</h3><br>
-        <a href="..\STUDENT\user-profile\edit-profile.html">Edit Profile</a><br>
-        <a href="..\STUDENT\user-profile\profile-page.html">Profile page</a><br>
+<body>
+  <h1>Student</h1>
+  <h3>Register, Welcome and Login pages</h3><br>
+  
+  <a href="/auth_ref/Welcome.html">Home Page</a><br>
+  <a href="/sign_up">Sign Up page</a><br>
+  <a href="/sign_in">Login page</a><br>
 
-        <br><br>
-        <h1>Lab Tech</h1>
-        <h3>Register, Welcome and Login pages</h3><br>
-        <a href="/">Home Page</a>
-        <br>
-        <a href="..\LABTECH\authentication\Register.html">Sign Up page</a>
-        <br>
-        <a href="..\LABTECH\authentication\Login.html">Login page</a>
-        <br>
-        <h3>Reservation pages</h3><br>
-        <a href="..\LABTECH\reservations\laboratory_1.html">Lab 1</a><br>
-        <a href="..\LABTECH\reservations\laboratory_2.html">Lab 2</a><br>
-        <a href="..\LABTECH\reservations\laboratory_3.html">Lab 3</a><br>
-        <a href="..\LABTECH\reservations\laboratory_4.html">Lab 4</a><br>
-        <a href="..\LABTECH\reservations\laboratory_5.html">Lab 5</a><br>
-        <a href="..\LABTECH\reservations\laboratory_6.html">Lab 6</a><br>
-        <a href="/">Reservation homepage</a><br>
-        <a href="/create">Create Reservations</a><br>
-        <a href="/view">View Reservations</a><br>
-        <h3>User Profile</h3><br>
-        <a href="..\LABTECH\user-profile\edit-profile.html">Edit Profile</a><br>
-        <a href="..\LABTECH\user-profile\profile-page.html">Profile page</a><br>
-    </body>
+  <h3>Reservation pages</h3><br>
+  <a href="/laboratory/1?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 1</a><br>
+  <a href="/laboratory/2?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 2</a><br>
+  <a href="/laboratory/3?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 3</a><br>
+  <a href="/laboratory/4?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 4</a><br>
+  <a href="/laboratory/5?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 5</a><br>
+  <a href="/home?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Reservation homepage</a><br>
+  <a href="/create?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Create Reservations</a><br>
+  <a href="/view?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">View Reservations</a><br>
+
+  <h3>User Profile</h3><br>
+  <a href="/prof_edit?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Edit Profile</a><br>
+  <a href="/prof_info?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Profile page</a><br>
+
+  <br><br>
+  <h1>Lab Tech</h1>
+  <h3>Register, Welcome and Login pages</h3><br>
+  <a href="/">Home Page</a><br>
+  <a href="/sign_up">Sign Up page</a><br>
+  <a href="/sign_in">Login page</a><br>
+
+  <h3>Reservation pages</h3><br>
+  <a href="/laboratory/1?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 1</a><br>
+  <a href="/laboratory/2?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 2</a><br>
+  <a href="/laboratory/3?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 3</a><br>
+  <a href="/laboratory/4?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 4</a><br>
+  <a href="/laboratory/5?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 5</a><br>
+  <a href="/home?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Reservation homepage</a><br>
+  <a href="/create?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Create Reservations</a><br>
+  <a href="/view?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">View Reservations</a><br>
+
+  <h3>User Profile</h3><br>
+  <a href="/prof_info?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Edit Profile</a><br>
+  <a href="/prof_edit?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Profile page</a><br>
+</body>
 </html>
