routing for indices cuz life can't be easy

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,18 +10,18 @@
   <a href="/sign_in">Login page</a><br>
 
   <h3>Reservation pages</h3><br>
-  <a href="/laboratory/1?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 1</a><br>
-  <a href="/laboratory/2?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 2</a><br>
-  <a href="/laboratory/3?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 3</a><br>
-  <a href="/laboratory/4?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 4</a><br>
-  <a href="/laboratory/5?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Lab 5</a><br>
-  <a href="/home?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Reservation homepage</a><br>
-  <a href="/create?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Create Reservations</a><br>
-  <a href="/view?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">View Reservations</a><br>
+  <a href="/laboratory/1?userId={{studentId}}&baseId={{studentId}}">Lab 1</a><br>
+  <a href="/laboratory/2?userId={{studentId}}&baseId={{studentId}}">Lab 2</a><br>
+  <a href="/laboratory/3?userId={{studentId}}&baseId={{studentId}}">Lab 3</a><br>
+  <a href="/laboratory/4?userId={{studentId}}&baseId={{studentId}}">Lab 4</a><br>
+  <a href="/laboratory/5?userId={{studentId}}&baseId={{studentId}}">Lab 5</a><br>
+  <a href="/home?userId={{studentId}}&baseId={{studentId}}">Reservation homepage</a><br>
+  <a href="/create?userId={{studentId}}&baseId={{studentId}}">Create Reservations</a><br>
+  <a href="/view?userId={{studentId}}&baseId={{studentId}}">View Reservations</a><br>
 
   <h3>User Profile</h3><br>
-  <a href="/prof_edit?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Edit Profile</a><br>
-  <a href="/prof_info?userId=6875098439b8468112e0de60&baseId=6875098439b8468112e0de60">Profile page</a><br>
+  <a href="/prof_edit?userId={{studentId}}&baseId={{studentId}}">Edit Profile</a><br>
+  <a href="/prof_info?userId={{studentId}}&baseId={{studentId}}">Profile page</a><br>
 
   <br><br>
   <h1>Lab Tech</h1>
@@ -31,17 +31,17 @@
   <a href="/sign_in">Login page</a><br>
 
   <h3>Reservation pages</h3><br>
-  <a href="/laboratory/1?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 1</a><br>
-  <a href="/laboratory/2?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 2</a><br>
-  <a href="/laboratory/3?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 3</a><br>
-  <a href="/laboratory/4?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 4</a><br>
-  <a href="/laboratory/5?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Lab 5</a><br>
-  <a href="/home?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Reservation homepage</a><br>
-  <a href="/create?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Create Reservations</a><br>
-  <a href="/view?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">View Reservations</a><br>
+  <a href="/laboratory/1?userId={{techId}}&baseId={{techId}}">Lab 1</a><br>
+  <a href="/laboratory/2?userId={{techId}}&baseId={{techId}}">Lab 2</a><br>
+  <a href="/laboratory/3?userId={{techId}}&baseId={{techId}}">Lab 3</a><br>
+  <a href="/laboratory/4?userId={{techId}}&baseId={{techId}}">Lab 4</a><br>
+  <a href="/laboratory/5?userId={{techId}}&baseId={{techId}}">Lab 5</a><br>
+  <a href="/home?userId={{techId}}&baseId={{techId}}">Reservation homepage</a><br>
+  <a href="/create?userId={{techId}}&baseId={{techId}}">Create Reservations</a><br>
+  <a href="/view?userId={{techId}}&baseId={{techId}}">View Reservations</a><br>
 
   <h3>User Profile</h3><br>
-  <a href="/prof_info?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Edit Profile</a><br>
-  <a href="/prof_edit?userId=6875098439b8468112e0de66&baseId=6875098439b8468112e0de66">Profile page</a><br>
+  <a href="/prof_info?userId={{techId}}&baseId={{techId}}">Edit Profile</a><br>
+  <a href="/prof_edit?userId={{techId}}&baseId={{techId}}">Profile page</a><br>
 </body>
 </html>
