--- a/views/res_edit.handlebars
+++ b/views/res_edit.handlebars
@@ -14,6 +14,7 @@
         <input type="hidden" name="date" value="{{selectedDate}}">
         <input type="hidden" name="laboratory" value="{{selectedLab}}">
         <input type="hidden" id="reservation-id" value="{{reservationId}}">
+        <input type="hidden" name="baseId" value="{{baseId}}">
 
 
         <!-- Date (READ-ONLY) -->
